--- a/todo/frontend/src/App.css
+++ b/todo/frontend/src/App.css
@@ -38,19 +38,20 @@
 }
 
 .header {
-    padding: 25px 5px;
-    text-align: center;
     background-color: #282c34;
-    font-size: 20px;
+    padding: 25px 5px;
+    text-align: left;
 }
 
 .header a {
+    margin: 0 30px 0 30px;
     text-decoration: none;
-    position: relative;
-    margin: 0 34px 0 30px;
     font-size: 17px;
-    display: inline-block;
     color: #ffffff;
+}
+
+.header a.active {
+    color: #9eb3de;
 }
 
 body {
@@ -61,6 +62,29 @@ body {
 
 .wrapper {
     min-height: 100%;
+}
+
+.content {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+table {
+    width: 100%;
+    margin-bottom: 20px;
+    border-collapse: collapse;
+}
+
+table th {
+    font-weight: bold;
+    padding: 10px;
+    background: #efefef;
+    border: 1px solid #dddddd;
+}
+
+table td {
+    border: 1px solid #dddddd;
+    padding: 10px;
 }
 
 .footer {
